src/main/java/com/example/faceToInterface/good/Person.java
package com.example.faceToInterface.good;

import com.example.faceToInterface.bad.Car;

/**
 * @author: xiongchaohua
 * @Des :
 * @create: 2021-07-15 18:19
 **/
public class Person {
    public void work(Move move) {
        move.work();
    }
}
