src/main/java/com/example/faceToInterface/bad/Bird.java
package com.example.faceToInterface.bad;

/**
 * @author: xiongchaohua
 * @Des :
 * @create: 2021-07-15 18:15
 **/
public class Bird {

    public void work(Car car) {
        car.move();
    }
}
